write a statement of copyright issue

--- a/src/asset/caffeine-beater/index.html
+++ b/src/asset/caffeine-beater/index.html
@@ -39,6 +39,10 @@
   </style>
 </head>
 <body>
+  <small>
+    このゲームは現在開発中です。ゲーム内で使用されている画像は全て無許可で利用しているため問題がありましたら<a href="https://twitter.com/gutchom">@gutchom</a>までご連絡下さい。
+  </small>
+
   <div class="game-wrapper">
     <iframe
       id="caffeine-beater"
